--- a/style.css
+++ b/style.css
@@ -221,6 +221,43 @@ body {
     }
 }
 
+.cloud {
+    position: absolute;
+    z-index: 1;
+    opacity: 0.7;
+    animation: cloudFloat 20s ease-in-out infinite;
+}
+
+.cloud-1 {
+    top: 10%;
+    right: 10%;
+    width: 120px;
+    animation-delay: 0s;
+}
+
+.cloud-2 {
+    bottom: 20%;
+    left: 5%;
+    width: 100px;
+    animation-delay: 10s;
+}
+
+@keyframes cloudFloat {
+    0%, 100% { transform: translateX(0px); }
+    50% { transform: translateX(30px); }
+}
+
+.mountain-img {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 600px;
+    z-index: 1;
+    opacity: 0.8;
+}
+
 /* Buttons */
 .btn {
     display: inline-block;
@@ -905,3 +942,4 @@ body {
 
 
     
+
